--- a/index.html
+++ b/index.html
@@ -23,12 +23,20 @@
             <div class="glass details">
                 Details : Current Weather API
             </div>
-            <div class="glass forecast">
-                Forecast : 3-hour Forecast 5 days
+            
+            <div class="glass buttons">
+                <button id="random" onclick="randomLocation()">
+                    <img src="icon/explore.svg" alt="explore"/>
+                    <p>Explore</p>
+                </button>
+                <button id="home" onclick="userLocation()">
+                    <img src="icon/home_pin.svg" alt="home"/>
+                    <p>Home</p>
+                </button>
             </div>
-            <div class="glass chart"> 
+            <!-- <div class="glass chart">
                 Chart : 3-hour Forecast 5 days
-            </div>
+            </div> -->
         </section>
     </section>
 
